# elpian

./: .gitignore  2D_GRAPHICS.md  2d_graphics.md  3D_GRAPHICS.md  3d_graphics.md  CANVAS_API.md  CHANGELOG.md  COMPILATION_FIXES.md  Cargo.toml  EVENT_SYSTEM.md  FEATURES.md  GAME_ENGINE_ROADMAP.md  JSON_STYLESHEET.md  NEXTJS_INTEGRATION.md  QUICKSTART.md  README.md  SCHEMA_REFERENCE.md  TPS_BEVY_MIGRATION_PLAN.md  TPS_OPTIMIZATION_PLAN.md  UPGRADE_SUMMARY.md  VM_INTEGRATION.md  VM_LOGIC.md  WIDGET_ELEMENT_AUDIT.md  index.html  logic_vm.md  pubspec.yaml  sample.txt
.github/workflows/: build_android_apk.yml  build_windows.yml  deploy-web.yml  deploy_web_pages.yml  windows_benchmark.yml
assets/: unified_program.js
assets/shaders/: blur_compute.wgsl  glass.wgsl
assets/web_runtime/: elpian_wasm_loader.js  quickjs_web_runtime.js
benchmarks/: RUN_BENCHMARK_AS_ADMIN.bat  cdp_diag.ps1  comprehensive_benchmark.ps1  run_benchmarks.ps1  run_presentmon_benchmark.ps1  run_real_browser_cdp.ps1  run_webview_cdp.ps1
benchmarks/reports/: comparison_report.md  elpian_benchmark_report.md  elpian_results.json  elpian_windows_results.json  real_comparison_report.md  real_elpian_benchmark_report.md  real_webview_benchmark_report.md  webview_benchmark_report.md  webview_real_results.json  webview_results.json
benchmarks/webview/: 01_basic_rendering.html  02_css_animations.html  03_complex_layout.html  04_canvas_drawing.html  05_list_scroll.html  06_complex_dashboard.html  07_smooth_animations.html  08_interactive_responsiveness.html  runner.html
example/: README.md  pubspec.yaml
example/caspar-node-machine/: Dockerfile  README.md  package-lock.json  package.json
example/integration_test/: elpian_benchmark_test.dart  tps_capture_test.dart  tps_smoke_test.dart
example/lib/: main.dart  main_tritonias.dart  main_tritonias_web.dart
example/linux/: CMakeLists.txt
example/test/: elpian_windows_benchmark_test.dart  widget_test.dart
example/test_driver/: integration_test_driver.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
lib/: elpian_ui.dart  main.dart  stac_flutter_ui.dart
lib/example/: bevy_scene_example.dart  canvas_example.dart  dom_canvas_logic_example.dart  enhanced_example.dart  (+8 more)
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/benches/: render.rs
rust/src/: lib.rs
rust/src/api/: bevy_ffi.rs  bevy_wasm_ffi.rs  mod.rs  wasm_ffi.rs
rust/src/bevy_scene/: gltf.rs  manager.rs  mod.rs  renderer.rs  schema.rs
rust/src/sdk/: compiler.rs  context.rs  data.rs  executor.rs  mod.rs  vm.rs
rust/tests/: animation_parity.rs  double_buffer.rs  feature_parity.rs  gltf_skinning.rs  mesh_winding.rs  renderer_golden.rs  static_world.rs  vm_ast_integration.rs
rust_builder/: pubspec.yaml
src/: api.rs  lib.rs  main.rs
stac_flutter_ui/: .gitignore  CANVAS_API.md  CHANGELOG.md  EVENT_SYSTEM.md  JSON_STYLESHEET.md  README.md  VM_INTEGRATION.md  flutter_rust_bridge.yaml  pubspec.yaml
stac_flutter_ui/rust/: Cargo.toml
stac_flutter_ui/rust/src/: lib.rs
stac_flutter_ui/rust/src/api/: bevy_ffi.rs  bevy_wasm_ffi.rs  ffi.rs  mod.rs  wasm_ffi.rs
stac_flutter_ui/rust/src/bevy_scene/: manager.rs  renderer.rs
stac_flutter_ui/rust/src/sdk/: data.rs  vm.rs
test/: canvas_paint_test.dart  client_comp_routing_test.dart  css_cache_merge_test.dart  css_display_none_test.dart  css_gradient_string_test.dart  css_overflow_test.dart  elpian_stream_widget_test.dart  elpian_ui_test.dart  elpian_windows_benchmark_test.dart  facility_section_layout_test.dart  flex_column_stretch_test.dart  flex_event_parentdata_test.dart  flex_link_row_test.dart  flex_unbounded_test.dart  form_value_events_test.dart  game_window_cascade_test.dart  gltf_quantized_normalize_test.dart  grid_layout_test.dart  icon_button_centering_test.dart  link_flex_content_test.dart  media_viewport_test.dart  nextjs_auth_test.dart  nextjs_form_fields_test.dart  nextjs_integration_test.dart  nextjs_server_render_test.dart  performance_benchmark_test.dart  quickjs_runtime_integration_test.dart  radio_group_test.dart  resource_pill_layout_test.dart  resources_url_test.dart  scene3d_frustum_clip_test.dart  scene3d_mesh_winding_test.dart  scene3d_model_normalize_test.dart  scene3d_perf_test.dart  scene3d_static_perf_test.dart  scene3d_static_render_test.dart  scene3d_tap_picking_test.dart  scope_patch_test.dart  scope_positioning_test.dart  stage_shell_layout_test.dart  (+2 more)
tests/: validation_tests.rs
upgrade/: 00-architecture-and-findings.md  A1-rust-build-profile.md  A2-rust-mesh-cache.md  A3-rust-rasterizer-inner-loop.md  A4-rust-parallel-rasterizer.md  A5-rust-frame-transfer-deps.md  A6-rust-vm-hotpath.md  B-dart-3d-fallback.md  C-dart-canvas2d.md  D-dart-html-css-dsl.md  E-flutter-impeller-config.md  F-zerocopy-lowlatency-frame-transfer.md  G-gpu-zerocopy-external-textures.md  README.md  STATUS.md  V-verification-and-benchmarking.md  X-cross-platform-compatibility.md
web/: elpian_wasm_loader.js  index.html  quickjs_web_runtime.js
(+500 files in other folders)
