[package]
name = "elpian_vm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.18"
glam = { version = "0.29", features = ["serde"] }

# Note: glam works natively on WASM without extra dependencies

# Native targets: rayon for the tiled multithreaded rasterizer (A4). Threads are
# unavailable on wasm32-unknown-unknown, so this is cfg-gated and the renderer
# keeps a serial fallback under cfg(target_arch = "wasm32").
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.10"

# Web target (wasm-bindgen for WASM builds)
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "render"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

# Benchmarks (Criterion) inherit release-level optimization so numbers reflect
# the shipped configuration. See upgrade/V-verification-and-benchmarking.md.
[profile.bench]
lto = true
codegen-units = 1
opt-level = 3
