[package]
name = "elpian_vm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.9.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.18"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
